--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,5 +33,12 @@
         android:layout_height="wrap_content"
         />
 
+    <Button
+        android:id="@+id/btnNewdata"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="All Live Matches"
+        />
+
 
 </RelativeLayout>
