--- a/app/src/main/res/layout/act_score_card.xml
+++ b/app/src/main/res/layout/act_score_card.xml
@@ -7,7 +7,10 @@
     android:orientation="vertical"
     android:layout_marginLeft="@dimen/common_m5d"
     android:layout_marginRight="@dimen/common_m5d">
-
+    <com.cjj.MaterialRefreshLayout
+        android:id="@+id/refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <android.support.v4.widget.NestedScrollView
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
@@ -92,5 +95,5 @@
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
-
+    </com.cjj.MaterialRefreshLayout>
 </LinearLayout>
